--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.57.1",
     "sort-by": "^0.0.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
